add read swagger docs
